--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cross-env NODE_ENV=development node ./scripts/server.js",
     "server": "npm run start",
     "clean:dist": "rm -rf ./dist/*",
-    "build": "cross-env NODE_ENV=production node ./scripts/build.js",
+    "compile": "cross-env NODE_ENV=production node ./scripts/build.js",
     "babel": "babel src --out-dir dist/lib",
     "lint:fix": "eslint src --fix --ext .js,.ts",
     "lint:create": "eslint --init"
