--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,3 @@
-sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
-phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
-electron_mirror=https://npm.taobao.org/mirrors/electron/
-registry=https://registry.npm.taobao.org
+registry=https://registry.npmmirror.com
+sass_binary_site=https://npmmirror.com/mirrors/node-sass/
+electron_mirror=https://npmmirror.com/mirrors/electron/
