--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development node ./scripts/server.js",
     "build": "cross-env NODE_ENV=production node ./scripts/build.js",
-    "compile": "rimraf ./dist/* && npm run build && rimraf ./lib/* && babel src --out-dir lib && node ./scripts/compile.js",
+    "compile": "rimraf ./dist/* && cross-env NODE_ENV=production node ./scripts/build.js --u=compile && rimraf ./lib/* && babel src --out-dir lib && node ./scripts/compile.js",
     "lint:fix": "eslint src --fix --ext .js,.ts",
     "lint:create": "eslint --init",
     "prepublish": "npm run compile"
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "babel-loader": "^8.1.0",
+    "boxen": "^5.1.2",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "cpr": "^3.0.1",
@@ -48,6 +49,7 @@
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "figlet": "^1.5.2",
     "filemanager-webpack-plugin": "^7.0.0",
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
@@ -57,6 +59,7 @@
     "lint-staged": "^10.3.0",
     "markdown-loader": "^8.0.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "minimist": "^1.2.6",
     "ora": "^4.0.2",
     "prettier": "^2.1.1",
     "style-loader": "^1.0.0",
